@@ -59,6 +59,7 @@ private:
 
 	// quantized signal as a function of time bunch
 	// DISABLED by default
+	// the first three entries are crate/slot/channel
 	map< int, int >  quantumS;
 
 	// charge ([0]), time([1] info at every step
@@ -219,6 +220,9 @@ public:
 
 	// write geant4 charge / time (as seen by electronic) info
 	virtual void writeChargeTime(outputContainer*, vector<hitOutput>, string, map<string, gBank>*) = 0;
+
+	// write fadc - jlab hybrid banks. This uses the translation table to write the crate/slot/channel
+//	virtual void writeFADC(outputContainer*, vector<hitOutput>) = 0;
 
 	// write event and close stream if necessary
 	virtual void writeEvent(outputContainer*) = 0;
